--- a/css/tstyles.css
+++ b/css/tstyles.css
@@ -1,15 +1,4 @@
-.circle {
-    position: relative;
-}
-
-.arrow {
-    position: absolute;
-}
-
-#downloadResult {
-    top: 20%; /* Adjust position */
-}
-
-#uploadResult {
-    bottom: 20%; /* Adjust position */
-}
+.circle {position: relative;}
+.arrow {position: absolute;}
+#downloadResult {top: 20%; /* Adjust position */}
+#uploadResult {bottom: 20%; /* Adjust position */}
